--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+
+    <color name="red">#e53935</color>
+    <color name="black">#16F40A</color>
+    <color name="white">#ffffff</color>
+    <color name="light_green">#51F00E</color>
+    <color name="yelow">#FFEB3B</color>
+    <color name="dark_grey">#555555</color>
+
 </resources>
