--- a/app/src/main/res/layout/mytext.xml
+++ b/app/src/main/res/layout/mytext.xml
@@ -2,7 +2,7 @@
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    android:textSize="16dp"
+    android:textSize="20sp"
     android:textColor="@color/white"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
